-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8257081 | 11.0.11-oracle | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8258463 | 11.0.11 | Robbin Ehn | P4 | Resolved | Fixed | b01 |
| JDK-8257851 | 11.0.10-oracle | Dukebot | P4 | Resolved | Fixed | b08 |
There are some use-cases where the VM is run on UP or UP like environments. The spin without yield can in such situations cause severe performance problems.
The handshake processing thread will continue to spin even if the events needed for progress cannot (or have a low chans of) happen.
The handshake processing thread will continue to spin even if the events needed for progress cannot (or have a low chans of) happen.
- backported by
-
JDK-8257081 Handshake processing thread lacks yielding
-
- Resolved
-
-
JDK-8257851 Handshake processing thread lacks yielding
-
- Resolved
-
-
JDK-8258463 Handshake processing thread lacks yielding
-
- Resolved
-