8244340: Handshake processing thread lacks yielding

Reviewed-by: pchilanomate, dholmes, dcubed